WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
32551
Web Inspector: Do not lose HTTP redirect information, display it in the Resources Panel.
https://bugs.webkit.org/show_bug.cgi?id=32551
Summary
Web Inspector: Do not lose HTTP redirect information, display it in the Resou...
Pavel Feldman
Reported
2009-12-15 04:51:06 PST
Currently we lose all the intermediate redirects / headers. We should not.
Attachments
[IMAGE] Navigating to gmail.com when not logged in now results in 3 entries.
(164.57 KB, image/png)
2009-12-15 04:52 PST
,
Pavel Feldman
no flags
Details
[PATCH] Proposed change (contains drive-by fix removing createScriptObject - no need in that).
(17.19 KB, patch)
2009-12-15 04:58 PST
,
Pavel Feldman
timothy
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Pavel Feldman
Comment 1
2009-12-15 04:52:53 PST
Created
attachment 44865
[details]
[IMAGE] Navigating to gmail.com when not logged in now results in 3 entries.
Pavel Feldman
Comment 2
2009-12-15 04:58:20 PST
Created
attachment 44867
[details]
[PATCH] Proposed change (contains drive-by fix removing createScriptObject - no need in that).
WebKit Review Bot
Comment 3
2009-12-15 05:00:36 PST
style-queue ran check-webkit-style on
attachment 44867
[details]
without any errors.
Timothy Hatcher
Comment 4
2009-12-15 07:59:20 PST
Comment on
attachment 44867
[details]
[PATCH] Proposed change (contains drive-by fix removing createScriptObject - no need in that).
> + if (resource != m_mainResource && windowVisible()) > resource->updateScriptObject(m_frontend.get());
Where does the main resource get updated?
Pavel Feldman
Comment 5
2009-12-15 08:37:19 PST
Committing to
http://svn.webkit.org/repository/webkit/trunk
... M WebCore/ChangeLog M WebCore/inspector/InspectorController.cpp M WebCore/inspector/InspectorFrontend.cpp M WebCore/inspector/InspectorFrontend.h M WebCore/inspector/InspectorResource.cpp M WebCore/inspector/InspectorResource.h M WebCore/inspector/front-end/inspector.js Committed
r52154
Pavel Feldman
Comment 6
2009-12-15 08:40:15 PST
(In reply to
comment #4
)
> (From update of
attachment 44867
[details]
) > > > + if (resource != m_mainResource && windowVisible()) > > resource->updateScriptObject(m_frontend.get()); > > Where does the main resource get updated?
It did not matter that much - I just wanted main resource not to be touched until the commit.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug