2009-12-15  Pavel Feldman  <pfeldman@chromium.org>

Reviewed by Timothy Hatcher.

        Web Inspector: Do not lose HTTP redirect information, display it
        in the Resources Panel.

        https://bugs.webkit.org/show_bug.cgi?id=32551

        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::populateScriptObjects):
        (WebCore::InspectorController::didCommitLoad):
        (WebCore::InspectorController::didLoadResourceFromMemoryCache):
        (WebCore::InspectorController::identifierForInitialRequest):
        (WebCore::InspectorController::willSendRequest):
        (WebCore::InspectorController::didReceiveResponse):
        (WebCore::InspectorController::didReceiveContentLength):
        (WebCore::InspectorController::didFinishLoading):
        (WebCore::InspectorController::didFailLoading):
        * inspector/InspectorFrontend.cpp:
        * inspector/InspectorFrontend.h:
        * inspector/InspectorResource.cpp:
        (WebCore::InspectorResource::InspectorResource):
        (WebCore::InspectorResource::appendRedirect):
        (WebCore::InspectorResource::updateScriptObject):
        (WebCore::InspectorResource::releaseScriptObject):
        (WebCore::InspectorResource::type):
        * inspector/InspectorResource.h:
        (WebCore::InspectorResource::):
        (WebCore::InspectorResource::Changes::setAll):
        * inspector/front-end/inspector.js:
        (WebInspector._addResource):
        (WebInspector.updateResource):


Canonical link: https://commits.webkit.org/43578@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52154 268f45cc-cd09-0410-ab3c-d52691b4dbfc